# bwm-ng

./: .gitignore  AUTHORS  COPYING  ChangeLog  LICENSE  Makefile.am  Makefile.in  NEWS  README  THANKS  acinclude.m4  aclocal.m4  autogen.sh  bwm-ng.1  bwm-ng.8  bwm-ng.conf-example  bwm-ng.css  changelog  config.h.in  config.h.in~  configure  configure.ac  configure.in  configure~  create_configure.sh
.github/workflows/: makefile.yml
configsrc/: aclocal.m4  config.h.in  configure.ac  netstat.m4  noreturn.m4  optarg.m4
configsrc/autom4te.cache/: output.0  requests  traces.0
src/: Makefile.am  Makefile.in  bwm-ng.c  bwm-ng.h  curses.c  curses.h  curses_tools.c  curses_tools.h  defines.h  global_vars.h  help.c  help.h  options.c  options.h  output.c  output.h  process.c  process.h  retrieve.c  retrieve.h  types.h
src/input/: devstat.c  devstat.h  getifaddrs.c  getifaddrs.h  ioservice.c  ioservice.h  libkstat.c  libkstat.h  libstatgrab.c  libstatgrab.h  netstat.c  netstat.h  proc_diskstats.c  proc_diskstats.h  proc_net_dev.c  proc_net_dev.h  retrieve.c  retrieve.h  sysctl.c  sysctl.h  win32.c  win32.h
